# flymodel

./: .env  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Cargo.toml  README.docs.md  README.md  Taskfile.yaml  artifacts.json  docker-compose.yaml  flymodel.toml  index.html  oranda.json  rustfmt.toml
.cargo/: Config.toml
.github/: dependabot.yml
.github/workflows/: .gitignore  check-and-lint.yaml  check-and-lint.yml  docs.yml  release.yml  test.yaml
artifacts/: index.html
book/: 404.html  cli.html  concepts.html  configuration.html  install.html  intro.html  print.html  searchindex.js  searchindex.json
book/concepts/: artifacts.html  experiment.html  model_versions.html  models.html  namespaces.html
book/configuration/: logs.html  retention.html  server.html  storage.html  tracing.html
clients/: .gitignore  Taskfile.yaml
clients/flymodel-python/: .gitignore  pyproject.toml
clients/flymodel-python/scripts/: introspect_rt.py
clients/flymodel-python/src/flymodel/: __init__.py  __init__.pyi  context.py  experiment.py
clients/flymodel-python/src/flymodel/client/: __init__.py
clients/flymodel-python/src/flymodel/models/: __init__.pyi  common.py  create_bucket.py  create_experiment.py  create_model.py  create_model_version.py  create_namespace.py  delete_bucket.py  delete_experiment.py  delete_model.py  delete_model_version.py  delete_namespace.py  enums.py  query_buckets.py  query_experiment.py  query_models.py  query_namespaces.py  update_model.py  update_model_version_state.py  update_namespace.py
clients/flymodel-python/src/flymodel_client/: __init__.py  __init__.pyi  client.pyi
clients/flymodel-python/src/flymodel_client/models/: __init__.pyi  common.pyi  create_experiment.pyi  create_model.pyi  create_model_version.pyi  enums.pyi  query_buckets.pyi  query_models.pyi  query_namespaces.pyi
clients/flymodel-python/tests/: __init__.py  fixture.py  test_client_init.py  test_context_client.py  test_create_model.py  test_create_model_version.py  test_create_namespace.py  test_exp.py  test_query_models.py  test_query_namespaces.py  test_reuse_runtime.py
conf/: flymodel-tls.toml  flymodel.toml  flymodel.yaml
crates/cli/: Cargo.toml
crates/cli/src/: cmds.rs  config.rs  lib.rs  log.rs
crates/cli/wix/: main.wxs
crates/client/: .gitignore  Cargo.toml  Taskfile.yaml
crates/client/src/: artifacts.rs  client.rs  lib.rs  maybe.rs  py.rs  trace.rs  wasm.rs
crates/client/src/experiment/: experiment.rs  mod.rs  state.rs
crates/client/src/py/: experiment.rs  fsm.rs
crates/client/tests/: create_model.rs
crates/dev/: Cargo.toml
crates/dev/src/: config_attr.rs  lib.rs  (+1 more)
crates/entities/: Cargo.toml
crates/entities/src/: db.rs  filters.rs  lib.rs  prelude.rs  queries.rs
crates/entities/src/entities/: bucket.rs  enums.rs  experiment.rs  experiment_artifact.rs  experiment_result.rs  experiment_state.rs  experiment_tag.rs  macros.rs  mod.rs  model.rs  model_artifact.rs  model_artifacts.rs  model_state.rs  model_states.rs  model_tag.rs  model_tags.rs  model_version.rs  model_version_tag.rs  model_version_tags.rs  namespace.rs  namespace_tag.rs  object_blob.rs  page.rs  prelude.rs  upload.rs
crates/entities/src/utils/: handle.rs  mod.rs  sql_errs.rs
crates/event/: Cargo.toml
crates/flymodel/: Cargo.toml
crates/flymodel/src/: conf.rs  errs.rs  lib.rs  lifecycle.rs  perms.rs  services.rs  storage.rs  tls.rs
crates/flymodel/src/config/: auth.rs  secret.rs
crates/graphql/: Cargo.toml  build.rs
crates/graphql/gql/mutations/: create_bucket.graphql  create_experiment.graphql  create_model.graphql  create_model_version.graphql  create_namespace.graphql  delete_bucket.graphql  delete_experiment.graphql  delete_model.graphql  delete_model_version.graphql  delete_namespace.graphql  update_model.graphql  update_model_version_state.graphql  update_namespace.graphql
crates/graphql/gql/queries/: query_buckets.graphql  query_experiment.graphql  query_experiment_artifacts.graphql  query_models.graphql  query_namespaces.graphql
crates/graphql/schema/: flymodel.graphql
crates/graphql/src/: enums.rs  fragments.rs  lib.rs  py.rs  scalars.rs  wasm.rs
crates/graphql/src/gql/: create_bucket.rs  create_experiment.rs  create_model.rs  create_model_version.rs  create_namespace.rs  delete_bucket.rs  delete_experiment.rs  delete_model.rs  delete_model_version.rs  delete_namespace.rs  mod.rs  query_buckets.rs  query_experiment.rs  query_experiment_artifacts.rs  query_models.rs  query_namespaces.rs  update_model.rs  update_model_version_state.rs  update_namespace.rs
crates/macros/: Cargo.toml
crates/macros/src/: hybrid_enum.rs  hybrid_feature_class.rs  lib.rs  with_context.rs
crates/macros/tests/: test_conditional.rs  test_with_context.rs
crates/members/: Cargo.toml  build.rs
crates/members/proto/v1/: membership.proto
crates/members/src/: lib.rs  membership.rs  server.rs
crates/migration/: Cargo.toml
crates/migration/seeds/: basic.yaml  multi-region.yaml
crates/migration/sql/pg/: 000001_down.sql  000001_up.sql
crates/migration/src/: cli.rs  hooks.rs  lib.rs  m000001_create_table.rs  m20220101_000001_create_table.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs  minio.rs  storage.rs  utils.rs
crates/service/: Cargo.toml
crates/service/src/: app.rs  artifacts.rs  lib.rs  schema.rs
crates/service/src/artifacts/: experiments.rs  model_version.rs
crates/service/src/mutations/: bucket.rs  experiment.rs  mod.rs  model.rs  model_version.rs  namespace.rs  root.rs
crates/service/src/queries/: bucket.rs  experiment.rs  mod.rs  model.rs  namespace.rs
crates/trace/: Cargo.toml  build.rs
crates/trace/src/: lib.rs  tracer.rs
dev/: setup-docker.sql
docker/: alpine.Dockerfile
docs/: book.toml
docs/src/: SUMMARY.md  cli.md  concepts.md  configuration.md  install.md  intro.md
hurl/: Taskfile.yaml
hurl/multi-region/: namespace.hurl
hurl/single-region/: experiment.hurl  experiment_artifact.json  experiment_artifact_payload.json  model_artifact.hurl  model_artifact.json  model_artifact_payload.json  namespace.hurl
(+12 files in other folders)
