[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Joshua A. <joshua.auchincloss@proton.me>"]
description = "ml model registry"
documentation = "https://github.com/flymodel/flymodel"
edition = "2021"
homepage = "https://github.com/flymodel/flymodel"
license = "AGPLv3 AND MIT AND BSD-2-Clause"
repository = "https://github.com/flymodel/flymodel"
rust-version = "1.75.0"
version = "0.1.0"

[workspace.dependencies]
serde-wasm-bindgen = "0.6"
cfg-if = "1"
actix = "0.13.1"
dotenv = "0.15.0"
actix-web = "4.4.0"
anyhow = "1.0.75"
async-graphql = "7.0.1"
async-graphql-actix-web = "7.0.1"
async-trait = "0.1.74"
chrono = "0.4"
clap = "4.4.10"
futures = "*"
futures-util = "0.3.29"
sea-orm = "0.12.7"
sea-orm-migration = "0.12.6"
serde = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
thiserror = "1.0.50"
tokio = "1.34.0"
tracing = "0.1"
tracing-subscriber = "0.3.18"
tracing-actix-web = "0.7.9"
url = "2"
wee_alloc = "0.4"
wasm-bindgen-futures = "0.4"
opentelemetry = "0.21.0"
opentelemetry-otlp = "0.14.0"
opentelemetry_sdk = "0.21.1"
tonic = "0.10.2"
paste = "1.0"
reqwest = "0.11"
opentelemetry-semantic-conventions = "0.13.0"
bytes = "1.5.0"
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-runtime-api = "1"
job_scheduler = "1.2"
iceoryx2 = "0.2.1"
actix-multipart = "0.6"
tsify = "0.4.5"
wasm-bindgen = "0.2"
surf = "2"
cynic = "3"
js-sys = "0.3"
prettytable = "0.10"
pyo3 = "0.20.2"


# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.5.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "flymodel/brew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-musl",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
