# The profile that 'cargo dist' will build with

[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
actix = "0.13"
actix-multipart = "0.6"
actix-web = "4.4"
anyhow = "1"
async-graphql = "7.0"
async-graphql-actix-web = "7.0"
async-trait = "0.1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-runtime-api = "1"
bytes = "1.5.0"
cfg-if = "1"
chrono = "0.4"
clap = "4.4.10"
console_error_panic_hook = "0.1"
cynic = "3"
cynic-codegen = "3"
dotenv = "0.15"
futures = "0.3"
futures-util = "0.3"
getrandom = "0.2"
iceoryx2 = "0.2.1"
job_scheduler = "1.2"
js-sys = "0.3"
once_cell = "1.19"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry-semantic-conventions = "0.13"
opentelemetry_sdk = "0.21"
partial-context = "0.1"
paste = "1"
prettytable = "0.10"
pyo3 = "0.20"
pyo3-asyncio = "0.20"
reqwest = "0.11"
sea-orm = "0.12"
sea-orm-migration = "0.12"
serde = "1"
serde-wasm-bindgen = "0.6"
serde_json = "1"
serde_yaml = "0.9"
surf = "2"
thiserror = "1"
tokio = "1.34"
tonic = "0.11"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = "0.3"
tracing-wasm = "0.2"
tsify = "0.4"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
wee_alloc = "0.4"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.5.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "flymodel/brew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "aarch64-unknown-linux-gnu",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-musl",
  "x86_64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
  "i686-pc-windows-msvc"
]

[workspace.package]
authors = ["Joshua A. <joshua.auchincloss@proton.me>"]
description = "ml model registry"
documentation = "https://github.com/flymodel/flymodel"
edition = "2021"
homepage = "https://github.com/flymodel/flymodel"
license = "AGPLv3 AND MIT AND BSD-2-Clause"
repository = "https://github.com/flymodel/flymodel"
rust-version = "1.75.0"
version = "0.1.0"
