[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "flymodel-client"
requires-python = ">=3.8"
readme = "../../README.md"
license = "../../LICENSE.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
module-name = "flymodel_client"
features = ["python"]
python-source = "src"
manifest-path = "../../crates/client/Cargo.toml"
