[package]
name = "flymodel-cli"
release = false
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true

[features]

[[bin]]
name = "flymodel"
doc = false

[dependencies]
anyhow.workspace = true
migration = { path = "../migration" }
flymodel = { path = "../flymodel" }
flymodel-registry = { path = "../registry" }
tracing.workspace = true
tracing-subscriber = "0.3"
serde = "1.0.193"
structured-logger = "1.0.3"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = [
    "num_cpus",
    "rt",
    "rt-multi-thread",
    "macros",
] }
toml = "0.8.8"
dotenv = "0.15.0"
sea-orm.workspace = true
clap = { version = "4.4.10", features = ["derive"]}
futures-util = "0.3.29"

