[[bin]]
doc = false
name = "flymodel"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
dotenv.workspace = true
flymodel = { path = "../flymodel" }
flymodel-migration = { path = "../migration" }
flymodel-tracing = { path = "../trace" }
flymodel-registry = { path = "../registry" }
flymodel-service = { path = "../service" }
tokio = { version = "1.34.0", features = [
  "num_cpus",
  "rt",
  "rt-multi-thread",
  "macros",
] }
toml = "0.8.8"
anyhow.workspace = true
futures-util.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["std"] }

[features]

[package]
name = "flymodel-cli"
readme = "README.md"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.wix]
upgrade-guid = "78FA60D7-3A67-448A-8531-07F3387FAD5E"
path-guid = "EF69B65C-0814-4699-B0DC-F718F93EA68B"
license = false
eula = false
