[package]
name = "flymodel-client"
readme.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "flymodel_client"
crate-type = ["cdylib", "lib"]

[features]

default = []
wasm = [
    "dep:wee_alloc",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "flymodel-graphql/wasm",
]

wasm-web = ["wasm", "flymodel-graphql/wasm-web"]
wasm-node = ["wasm", "flymodel-graphql/wasm-node"]

python = ["dep:pyo3", "flymodel-graphql/python"]

[dependencies]
flymodel-macros = { path = "../macros" }
flymodel-graphql = { path = "../graphql" }
flymodel-dev = { path = "../dev" }

paste.workspace = true
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
cfg-if.workspace = true
cynic = { workspace = true, features = ["http-reqwest"] }
reqwest.workspace = true
serde_json.workspace = true
tsify.workspace = true
url.workspace = true
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
wee_alloc = { workspace = true, optional = true }
pyo3 = { workspace = true, features = ["extension-module"], optional = true }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3" }
tokio.workspace = true


[package.metadata.release]
shared-version = true
repository.workspace = true
rust-version.workspace = true
