[package]
name = "flymodel-client"
readme.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "flymodel_client"
crate-type = ["cdylib", "lib"]

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]

wasm = [
    "flymodel-graphql/wasm",
    "dep:wee_alloc",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:tracing-wasm",
    "dep:tracing",
    "dep:console_error_panic_hook",
    "getrandom/js",
    "serde-wasm-bindgen",
    "js-sys",
]

wasm-web = ["wasm", "flymodel-graphql/wasm-web"]
wasm-node = ["wasm", "flymodel-graphql/wasm-node", "wasm-logger"]
python = [
    "flymodel-graphql/python",
    "pyo3/extension-module",
    "dep:pyo3-asyncio",
    "tokio/rt",
    "tracing",
    "once_cell",
]

[dependencies]
flymodel-macros = { path = "../macros" }
flymodel-graphql = { path = "../graphql" }


futures.workspace = true
rust-fsm = { version = "0.6", features = ["dsl"] }
paste.workspace = true
anyhow.workspace = true
serde.workspace = true
bytes.workspace = true
thiserror.workspace = true
cfg-if.workspace = true
cynic = { workspace = true, features = ["http-reqwest"] }
reqwest = { workspace = true, features = ["multipart"] }
serde_json.workspace = true
tsify.workspace = true
url.workspace = true
js-sys = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
wee_alloc = { workspace = true, optional = true }
pyo3 = { workspace = true, features = ["serde"], optional = true }
pyo3-asyncio = { workspace = true, features = [
    "attributes",
    "tokio-runtime",

], optional = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true, optional = true }
tracing-wasm = { workspace = true, optional = true }
wasm-logger = { version = "0.2.0", optional = true }
tracing-subscriber = { workspace = true, optional = true, features = [
    "env-filter",
] }
console_error_panic_hook = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
partial-context = { workspace = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
tokio = { workspace = true, features = ["full"] }
flymodel-dev = { path = "../dev" }
anyhow.workspace = true

[package.metadata.release]
shared-version = true
repository.workspace = true
rust-version.workspace = true

[profile.release]
lto = 'fat'
debug = true
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
