[package]
name = "flymodel-entities"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true

[features]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.release]
shared-version = true

[dependencies]
flymodel = { path = "../flymodel" }
flymodel-tracing = { path = "../trace" }
opentelemetry.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-graphql = { workspace = true, features = [
  "tracing",
  "decimal",
  "chrono",
  "dataloader",
  "dynamic-schema",
] }
serde.workspace = true
chrono.workspace = true
sea-orm = { workspace = true, features = ["chrono"] }
lazy_static = "1.4.0"
juniper = "0.15.11"
sea-query = "0.30.4"


[dependencies.sea-orm-migration]
workspace = true
features = ["runtime-tokio-native-tls", "sqlx-postgres"]
