[package]
name = "flymodel"
readme = "README.md"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[package.metadata.release]
shared-version = true
repository.workspace = true
rust-version.workspace = true

[badges]
maintenance = {status = "actively-developed"}

[dependencies]
serde = {workspace = true, features = ["derive"]}
sea-orm.workspace = true
thiserror.workspace = true
bitflags = "2.4.1"

[dependencies.sea-orm-migration]
features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres"
]
workspace = true

[features]
