[package]
name = "flymodel"
readme = "README.md"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[package.metadata.release]
shared-version = true
repository.workspace = true
rust-version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
sea-orm.workspace = true
async-graphql.workspace = true
bytes.workspace = true
async-trait.workspace = true
thiserror.workspace = true
aws-sdk-s3.workspace = true
aws-smithy-runtime-api.workspace = true
bitflags = "2.4.1"
url = { version = "2.5.0", features = ["serde"] }
config = "0.13.4"
actix-web.workspace = true
serde_json.workspace = true


[dependencies.sea-orm-migration]
features = ["runtime-tokio-native-tls", "sqlx-postgres"]
workspace = true

[features]
client = []