[package]
name = "flymodel-graphql"
readme = "README.md"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[package.metadata.release]
shared-version = true
repository.workspace = true
rust-version.workspace = true


[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
wasm = [
    "chrono/wasmbind",
    "tsify/wasm-bindgen",
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen",
]

wasm-web = ["wasm"]
wasm-node = ["wasm", "chrono/js-sys", "tsify/js"]

python = ["dep:pyo3", "pyo3/chrono"]


[badges]
maintenance = { status = "actively-developed" }

[target.'cfg(target_arch = "wasm32")'.dependencies]

[dependencies]

flymodel-macros = { path = "../macros" }
flymodel-dev = { path = "../dev" }

cfg-if.workspace = true
cynic = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
pyo3 = { workspace = true, features = [
    "extension-module",
    "chrono",
    "serde",
    "experimental-inspect",
], optional = true }


[build-dependencies]
cynic-codegen = { version = "3", features = ["rkyv"] }

[dev-dependencies]
prettytable.workspace = true
insta.workspace = true


[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
