[package]
name = "flymodel-members"
readme = "../../README.md"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[package.metadata.release]
shared-version = true
repository.workspace = true
rust-version.workspace = true

[badges]
maintenance = { status = "actively-developed" }


[features]

[dependencies]
flymodel = { path = "../flymodel" }
tonic = { version = "0.10.2", features = ["prost"] }
anyhow.workspace = true
async-trait.workspace = true
prost = "0.12"
prost-types = "0.12"
rkyv = "0.7.42"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
either = { version = "1.9" }
async-stream = { version = "0.3" }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.8" }
moka = { version = "0.12.1", features = [
    "log",
    "logging",
    "async-trait",
    "async-lock",
    "future",
] }
futures = "0.3.29"
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
ginepro = "0.7.0"
url = "2.5.0"
thiserror.workspace = true
job_scheduler.workspace = true

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
anyhow.workspace = true
glob = "0.3.1"
