[package]
name = "flymodel-migration"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
license.workspace = true


[dependencies]
flymodel = { path = "../flymodel" }
flymodel-entities = { path = "../entities" }
async-std = { version = "1", features = ["attributes", "tokio1"] }
clap = { workspace = true, features = ["derive"] }
sea-orm.workspace = true
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
tokio.workspace = true

[dependencies.sea-orm-migration]
workspace = true
features = ["runtime-tokio-native-tls", "sqlx-postgres"]
