[package]
name = "flymodel-registry"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true

[features]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.release]
shared-version = true

[dependencies]
flymodel-entities = { path = "../entities" }
anyhow.workspace = true
async-trait = "0.1.74"
tracing.workspace = true
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
tokio = { version = "1.34.0", features = ["full"] }
bytes = "1.5.0"
