[package]
name = "flymodel-registry"
readme = "README.md"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[package.metadata.release]
shared-version = true
repository.workspace = true
rust-version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
dotenv.workspace = true
bytes.workspace = true
flymodel = { path = "../flymodel" }
flymodel-entities = { path = "../entities" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true

[features]
