[package]
name = "flymodel-service"
readme = "README.md"
authors.workspace = true
version.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

[package.metadata.release]
shared-version = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-graphql = { workspace = true, features = [
    "tracing",
    "dataloader",
    "opentelemetry",
] }
flymodel = { path = "../flymodel" }
flymodel-entities = { path = "../entities" }
flymodel-registry = { path = "../registry" }
flymodel-tracing = { path = "../trace" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
actix.workspace = true
tracing-actix-web.workspace = true
actix-web = { workspace = true, features = ["openssl"] }
openssl = "0.10"
anyhow.workspace = true
async-graphql-actix-web.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
tracing.workspace = true
actix-web-opentelemetry = { version = "0.16.0", features = ["metrics"] }
opentelemetry = { workspace = true, features = [
    "logs",
    "metrics",
    "logs_level_enabled",
] }
paste.workspace = true
bytes.workspace = true
actix-multipart.workspace = true
sha256 = "1.5.0"

[features]
